{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 71,
  "lineage": "4cda8e11-5b5f-9602-54ba-1d2ddbba7a71",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "test-rg2-dev-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/60c18735-bc4c-44a8-8ed9-83c6e4a226d1/resourceGroups/test-rg2-dev/providers/Microsoft.Network/publicIPAddresses/dev-publicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.7.59.218",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "dev-publicIP",
            "resource_group_name": "test-rg2-dev",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "test-rg2-dev-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/60c18735-bc4c-44a8-8ed9-83c6e4a226d1/resourceGroups/test-rg2-dev/providers/Microsoft.Network/networkInterfaces/dev-nic",
            "internal_domain_name_suffix": "fnkppr2fxrkermpxj24xsvx23e.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/60c18735-bc4c-44a8-8ed9-83c6e4a226d1/resourceGroups/test-rg2-dev/providers/Microsoft.Network/publicIPAddresses/dev-publicIP",
                "subnet_id": "/subscriptions/60c18735-bc4c-44a8-8ed9-83c6e4a226d1/resourceGroups/test-rg2-dev/providers/Microsoft.Network/virtualNetworks/test-rg2-vn/subnets/dev-subnetA"
              }
            ],
            "location": "eastus2",
            "mac_address": "60-45-BD-7A-DC-F2",
            "name": "dev-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "test-rg2-dev",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/60c18735-bc4c-44a8-8ed9-83c6e4a226d1/resourceGroups/test-rg2-dev/providers/Microsoft.Compute/virtualMachines/dev-ubuntu18.04"
          },
          "dependencies": [
            "azurerm_public_ip.test-rg2-dev-pubip",
            "azurerm_resource_group.test-rg2-dev-env",
            "azurerm_subnet.test-rg2-dev-subnet",
            "azurerm_virtual_network.test-rg2-dev-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "test-rg2-dev-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/60c18735-bc4c-44a8-8ed9-83c6e4a226d1/resourceGroups/test-rg2-dev/providers/Microsoft.Network/networkSecurityGroups/dev-nsg",
            "location": "eastus2",
            "name": "dev-nsg",
            "resource_group_name": "test-rg2-dev",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test-rg2-dev-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "test-rg2-dev-nsr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/60c18735-bc4c-44a8-8ed9-83c6e4a226d1/resourceGroups/test-rg2-dev/providers/Microsoft.Network/networkSecurityGroups/dev-nsg/securityRules/dev-rule",
            "name": "dev-rule",
            "network_security_group_name": "dev-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "test-rg2-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test-rg2-dev-nsg",
            "azurerm_resource_group.test-rg2-dev-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "test-rg2-dev-pubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/60c18735-bc4c-44a8-8ed9-83c6e4a226d1/resourceGroups/test-rg2-dev/providers/Microsoft.Network/publicIPAddresses/dev-publicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.7.59.218",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "dev-publicIP",
            "resource_group_name": "test-rg2-dev",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.test-rg2-dev-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test-rg2-dev-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/60c18735-bc4c-44a8-8ed9-83c6e4a226d1/resourceGroups/test-rg2-dev/providers/Microsoft.Network/virtualNetworks/test-rg2-vn/subnets/dev-subnetA",
            "name": "dev-subnetA",
            "resource_group_name": "test-rg2-dev",
            "virtual_network_name": "test-rg2-vn"
          },
          "dependencies": [
            "azurerm_resource_group.test-rg2-dev-env",
            "azurerm_virtual_network.test-rg2-dev-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "test-rg2-dev-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/60c18735-bc4c-44a8-8ed9-83c6e4a226d1/resourceGroups/test-rg2-dev/providers/Microsoft.Network/virtualNetworks/test-rg2-vn/subnets/dev-subnetA",
            "network_security_group_id": "/subscriptions/60c18735-bc4c-44a8-8ed9-83c6e4a226d1/resourceGroups/test-rg2-dev/providers/Microsoft.Network/networkSecurityGroups/dev-nsg",
            "subnet_id": "/subscriptions/60c18735-bc4c-44a8-8ed9-83c6e4a226d1/resourceGroups/test-rg2-dev/providers/Microsoft.Network/virtualNetworks/test-rg2-vn/subnets/dev-subnetA"
          },
          "dependencies": [
            "azurerm_network_security_group.test-rg2-dev-nsg",
            "azurerm_resource_group.test-rg2-dev-env",
            "azurerm_subnet.test-rg2-dev-subnet",
            "azurerm_virtual_network.test-rg2-dev-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "test-rg2-dev-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c7f7542b-bc85-4854-b1f7-4f3d7956fcec",
            "id": "/subscriptions/60c18735-bc4c-44a8-8ed9-83c6e4a226d1/resourceGroups/test-rg2-dev/providers/Microsoft.Network/virtualNetworks/test-rg2-vn",
            "location": "eastus2",
            "name": "test-rg2-vn",
            "resource_group_name": "test-rg2-dev",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/60c18735-bc4c-44a8-8ed9-83c6e4a226d1/resourceGroups/test-rg2-dev/providers/Microsoft.Network/virtualNetworks/test-rg2-vn/subnets/dev-subnetA",
                "name": "dev-subnetA",
                "security_group": "/subscriptions/60c18735-bc4c-44a8-8ed9-83c6e4a226d1/resourceGroups/test-rg2-dev/providers/Microsoft.Network/networkSecurityGroups/dev-nsg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.test-rg2-dev-env"
          ]
        }
      ]
    }
  ]
}